crates/macros/tests/fail/fixed-layout/non-sized-fixed-layout.rs
fn main() {
    fn ensure<T: mem_markers::FixedLayout>() {}
    ensure::<&str>();
}
